<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentOrderActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="1dp">

    <Button
        android:id="@+id/place_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:layout_marginBottom="79dp"
        android:text="@string/place_order_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_order_list" />

    <TextView
        android:id="@+id/total_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="108dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/current_order_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="49dp"
        android:layout_marginBottom="51dp"
        app:layout_constraintBottom_toBottomOf="@+id/sub_total_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_order_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@+id/current_order_text"
        app:layout_constraintBottom_toTopOf="@+id/current_order_list"
        android:text="@string/instruction_text"/>

    <TextView
        android:id="@+id/current_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/current_order_text"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clear_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="9dp"
        android:text="@string/clear_order_text"
        app:layout_constraintBottom_toTopOf="@+id/place_order_button"
        app:layout_constraintStart_toStartOf="@+id/place_order_button" />

    <TextView
        android:id="@+id/sub_total_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/sales_tax_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sales_tax_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/total_text"
        app:layout_constraintStart_toEndOf="@+id/sub_total_text" />

</androidx.constraintlayout.widget.ConstraintLayout>